[gd_scene load_steps=11 format=3 uid="uid://cql4su5gauqwp"]

[ext_resource type="Script" path="res://autoloads/MouseTrap.gd" id="1"]
[ext_resource type="PackedScene" path="res://menus/HBConfirmationWindow.tscn" id="2"]
[ext_resource type="Script" path="res://autoloads/CacheSongOverlay.gd" id="3"]
[ext_resource type="Script" path="res://autoloads/PPDDialog.gd" id="4"]
[ext_resource type="Theme" uid="uid://4xcdimhfc2hy" path="res://default_theme_tools.tres" id="5"]
[ext_resource type="StyleBox" path="res://styles/PanelStyleTransparentIcon.tres" id="6"]
[ext_resource type="StyleBox" path="res://styles/PanelStyleTransparentIconHover.tres" id="7"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="8"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="2"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 120
script = ExtResource("1")

[node name="MouseTrap" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PPDFileDialog" type="FileDialog" parent="MouseTrap"]
size = Vector2i(415, 176)
theme = ExtResource("5")
show_hidden_files = true

[node name="CacheSongOverlay" type="Control" parent="MouseTrap"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("3")

[node name="DownloadConfirmPopup" parent="MouseTrap/CacheSongOverlay" instance=ExtResource("2")]
text = "This song requires downloading video/audio files from YouTube, would you like to download them?"

[node name="Panel" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup" index="0"]
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel" index="0"]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="VBoxContainer" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel/MarginContainer" index="0"]
layout_mode = 2

[node name="Label" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "This song requires downloading video/audio files from YouTube, would you like to download them?"

[node name="HBoxContainer" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel" index="1"]
layout_mode = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 46.0

[node name="AcceptButton" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel/HBoxContainer" index="0"]
layout_mode = 2

[node name="AcceptButtonAudio" type="Button" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel/HBoxContainer" index="1"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/normal = ExtResource("6")
theme_override_styles/hover = ExtResource("7")
theme_override_styles/pressed = ExtResource("7")
text = "Yes (audio only)"
script = ExtResource("8")

[node name="CancelButton" parent="MouseTrap/CacheSongOverlay/DownloadConfirmPopup/Panel/HBoxContainer" index="2"]
layout_mode = 2

[node name="DownloadingPrompt" parent="MouseTrap/CacheSongOverlay" instance=ExtResource("2")]
has_cancel = false
has_accept = false
text = "Downloading..."

[node name="ErrorPrompt" parent="MouseTrap/CacheSongOverlay" instance=ExtResource("2")]
has_cancel = false
text = "Media for this song is currently being downloaded."
accept_text = "Ok"

[node name="PPDDialog" type="Window" parent="MouseTrap"]
visible = false
exclusive = true
theme = ExtResource("5")
script = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="MouseTrap/PPDDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MouseTrap/PPDDialog/MarginContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="MouseTrap/PPDDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("1")
theme_override_styles/normal = SubResource("2")
bbcode_enabled = true
text = "Due to legal and licensing reasons, Project Heartbeat cannot use MP4 files for PPD songs. Read more about why here.

The recommended way to share and play community charts is to use the Workshop, PPD suport is provided as a courtesy for transitioning players.

You can either input a YouTube URL or select an ogg file from disk to use as audio."
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="MouseTrap/PPDDialog/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MouseTrap/PPDDialog/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UseYouTube" type="Button" parent="MouseTrap/PPDDialog/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Use YouTube Video"

[node name="Button" type="Button" parent="MouseTrap/PPDDialog/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Select from disk"

[node name="AcceptDialog" type="AcceptDialog" parent="MouseTrap/PPDDialog"]
dialog_text = "Invalid URL, ensure you are using a YouTube URL and that it is valid."

[node name="AddContentDirDialog" type="FileDialog" parent="MouseTrap"]
mode = 2
theme = ExtResource("5")
access = 2
show_hidden_files = true

[connection signal="meta_clicked" from="MouseTrap/PPDDialog/MarginContainer/VBoxContainer/Label" to="." method="_on_Label_meta_clicked"]
[connection signal="pressed" from="MouseTrap/PPDDialog/MarginContainer/VBoxContainer/Button" to="MouseTrap/PPDFileDialog" method="popup_centered"]

[editable path="MouseTrap/CacheSongOverlay/DownloadConfirmPopup"]
